--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         </ul>
     </div>
 
+    <input
+        type="text"
+        placeholder="Digite 1 senha qualquer"
+        class="input"
+        name="algo"
+     >
+
     <button type="submit" style="
         border-radius: 3px;
         color: green;
