--- a/index.html
+++ b/index.html
@@ -8,44 +8,17 @@
 <body>
     <h1>Olá JavaScript</h1>
 
-    <div id="teste1">
+    <div>
         <ul>
-            <li
-                style="
-                    background-color: lightgreen;
-                    padding: 3px;
-                    border-radius: 3px;
-                "
-            >Item 1</li>
-            <li>Item 2</li>
-        </ul>
-    </div>
-    <div id="teste2">
-        <ul>
-            <li>Item 3</li>
-            <li>Item 4</li>
+            <li>Algum item 1</li>
+            <li>Algum item 2</li>
         </ul>
     </div>
 
-    <p style="
-        margin-top: 3px;
-        margin-bottom: 2px;
-    ">VER NO CONSOLE.LOG</p>
     <input
         type="text"
-        placeholder="Digite algo aqui"
+        placeholder="Digite 1 item p/ add na lista"
     >
-
-    <button type="submit" style="
-        border-radius: 3px;
-        color: green;
-        fort-weight: bold;
-        font-family: finger paint;
-    "
-
-    class="botao azul"
-    onclick="clicou()"
-    >Clique aqui</button>
 
     <p id="imprimir"></p>
 
