--- a/index.html
+++ b/index.html
@@ -8,19 +8,7 @@
 <body>
     <h1>Olá JavaScript</h1>
 
-    <div>
-        <ul>
-            <li>Algum item 1</li>
-            <li>Algum item 2</li>
-        </ul>
-    </div>
-
-    <input
-        type="text"
-        placeholder="Digite 1 item p/ add na lista"
-    >
-
-    <p id="imprimir"></p>
+    <p>Veja no console</p>
 
     <script src="assets/js/script.js"></script>
 </body>
