--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css\style_geral.css">
     <title>ESTUDANDO JS</title>
     <style>
         body{
@@ -15,6 +16,11 @@
     <h1>Olá JavaScript</h1>
 
     <p>Veja no console</p>
+
+    <button
+        class="buttonGeral"
+        id="botao"
+    >Botão qualquer</button>
 
     <script src="assets/js/script.js"></script>
 </body>
