--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         id="botao"
     >Botão qualquer</button>
 
+    <button
+        id="inserir"
+        class="buttonGeral"
+    >
+        Inserir novo post
+    </button>
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
