--- a/index.html
+++ b/index.html
@@ -17,16 +17,13 @@
 
     <p>Veja no console</p>
 
-    <button
-        class="buttonGeral"
-        id="botao"
-    >Botão qualquer</button>
+    <img src="images/cachorro.jpg" alt="animais" class="imagem"><br />
+    <button onclick="trocarImagem('cachorro.jpg')" class="buttonGeral">
+        Cachorro
+    </button>
 
-    <button
-        id="inserir"
-        class="buttonGeral"
-    >
-        Inserir novo post
+    <button onclick="trocarImagem('gato.jpg')" class="buttonGeral">
+        Gato
     </button>
 
     <script src="assets/js/script.js"></script>
