--- a/index.html
+++ b/index.html
@@ -13,25 +13,13 @@
     </style>
 </head>
 <body>
-    <h1>Olá JavaScript</h1>
+    <h1 id="titulo">Olá JavaScript</h1>
 
     <p>Veja no console</p>
 
-    <img src="images/cachorro.jpg" data-animal="Cachorro"
-    alt="animais" class="imagem">
-    <br />
+    <div class="teste1">
 
-    <button onclick="trocarImagem('cachorro.jpg', 'Cachorro')" class="buttonGeral">
-        Cachorro
-    </button>
-
-    <button onclick="trocarImagem('gato.jpg', 'Gato')" class="buttonGeral">
-        Gato
-    </button>
-
-    <button class="buttonGeral" onclick="pegarAnimal()">
-        Qual é o animal.
-    </button>
+    </div>
 
     <script src="assets/js/script.js"></script>
 </body>
