--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
 <body>
     <h1 id="titulo">Olá JavaScript</h1>
 
-    <p>Veja no console</p>
+    <!-- <p>Veja no console</p> -->
 
-    <div class="teste1">
+    <button class="buttonGeral" onclick="comecar()">
+        Começar
+    </button>
+    <button class="buttonGeral" onclick="parar()">
+        Parar
+    </button><br><br>
+
+    <div class="teste1 textoTeste">
 
     </div>
 
