--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
     <!-- <p>Veja no console</p> -->
 
-    <button class="buttonGeral" onclick="comecar()">
-        Começar
+    <button class="buttonGeral" onclick="rodar()">
+        Rodar em 2s
     </button>
     <button class="buttonGeral" onclick="parar()">
-        Parar
+        Parar antes
     </button><br><br>
 
     <div class="teste1 textoTeste">
