tipos de função

--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
 
     <!-- <p>Veja no console</p> -->
 
-    <button class="buttonGeral" onclick="rodar()">
-        Rodar em 2s
-    </button>
     <button class="buttonGeral" onclick="parar()">
-        Parar antes
+        Botão teste
     </button><br><br>
 
     <div class="teste1 textoTeste">
