--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
 
     <!-- <p>Veja no console</p> -->
 
-    <button class="buttonGeral" onclick="parar()">
-        Botão teste
+    <input type="file" name="" id="arquivo"><br><br>
+
+    <button class="buttonGeral" onclick="enviar()">
+        Enviar
     </button><br><br>
-
-    <div class="teste1 textoTeste">
-
-    </div>
 
     <script src="assets/js/script.js"></script>
 </body>
