--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 
     <!-- <p>Veja no console</p> -->
 
-    <input type="file" name="" id="arquivo"><br><br>
-
-    <button class="buttonGeral" onclick="enviar()">
-        Enviar
+    <input type="file" accept="image/*" id="imagem"><br><br>
+    <button onclick="mostrar()" class="buttonGeral">
+        Mostrar
     </button><br><br>
+
+    <div id="area"></div>
 
     <script src="assets/js/script.js"></script>
 </body>
