select elements in console

--- a/index.html
+++ b/index.html
@@ -14,13 +14,29 @@
 </head>
 <body>
     <h1 id="titulo">Olá JavaScript</h1>
+    <h1>Outro título</h1>
 
     <input type="file" accept="image/*" id="imagem"><br><br>
     <button onclick="mostrar()" class="buttonGeral">
         Mostrar
     </button><br><br>
 
-    <div id="area"></div>
+    <div id="teste">
+        <ul>
+            <li>Algum item 1</li>
+            <li>Algum item 2</li>
+        </ul>
+        <strong>Testando 123</strong>
+    </div>
+    <div id="teste1">
+        <ul>
+            <li>Algum item 3</li>
+            <li>Algum item 4</li>
+        </ul>
+    </div>
+    <button class="botao buttonGeral" onclick="clicou()">
+        Clique aqui
+    </button>
 
     <p>Veja o console.log</p>
 
