--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 </head>
 <body>
     <h1 id="titulo">Olá JavaScript</h1>
-    <h1>Outro título</h1>
 
     <input type="file" accept="image/*" id="imagem"><br><br>
-    <button onclick="mostrar()" class="buttonGeral">
+    <button onclick="mostrar()" class="buttonGeral botao2">
         Mostrar
     </button><br><br>
 
