--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 id="titulo">Olá JavaScript</h1>
 
     <input type="file" accept="image/*" id="imagem"><br><br>
-    <button onclick="mostrar()" class="buttonGeral botao2">
+    <button class="buttonGeral botao2">
         Mostrar
     </button><br><br>
 
@@ -33,7 +33,7 @@
             <li>Algum item 4</li>
         </ul>
     </div>
-    <button class="botao buttonGeral" onclick="clicou()">
+    <button class="botao buttonGeral" >
         Clique aqui
     </button>
 
