--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li>Algum item 4</li>
         </ul>
     </div>
-    <button class="botao buttonGeral" >
+    <button class="botao buttonGeral" onclick="clicou()">
         Clique aqui
     </button>
 
