--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 <body>
     <h1 id="titulo">Olá JavaScript</h1>
 
-    <input type="file" accept="image/*" id="imagem"><br><br>
-    <button class="buttonGeral botao2">
-        Mostrar
+    <input type="password"
+        name="algo"
+        placeholder="Digite sua senha"
+        class="input"
+    ><br><br>
+    <button onclick="clicou()" class="buttonGeral botao2">
+        Mostrar senha
     </button><br><br>
 
     <div id="teste">
@@ -33,7 +37,7 @@
             <li>Algum item 4</li>
         </ul>
     </div>
-    <button class="botao buttonGeral" onclick="clicou()">
+    <button class="botao buttonGeral">
         Clique aqui
     </button>
 
