POO com classes

--- a/index.html
+++ b/index.html
@@ -15,31 +15,15 @@
 <body>
     <h1 id="titulo">Olá JavaScript</h1>
 
-    <input type="password"
-        name="algo"
-        placeholder="Digite sua senha"
-        class="input"
-    ><br><br>
-    <button onclick="clicou()" class="buttonGeral botao2">
-        Mostrar senha
+    <button onclick="clicou()"
+        class="
+            buttonGeral
+            botao2
+            azul
+        ">
+        Fazer ação
     </button><br><br>
 
-    <div id="teste">
-        <ul>
-            <li>Algum item 1</li>
-            <li>Algum item 2</li>
-        </ul>
-        <strong>Testando 123</strong>
-    </div>
-    <div id="teste1">
-        <ul>
-            <li>Algum item 3</li>
-            <li>Algum item 4</li>
-        </ul>
-    </div>
-    <button class="botao buttonGeral">
-        Clique aqui
-    </button>
 
     <p>Veja o console.log</p>
 
