--- a/index.html
+++ b/index.html
@@ -12,21 +12,12 @@
         }
     </style>
 </head>
-<body>
-    <h1 id="titulo">Olá JavaScript</h1>
+<body id="corpo">
+    <h1 id="titulo">Remover Elemento</h1>
 
-    <button onclick="clicou()"
-        class="
-            buttonGeral
-            botao2
-            azul
-        ">
-        Fazer ação
-    </button><br><br>
+    <p id="texto">Texto que será removido...</p>
+    <p><button class="buttonGeral" onclick="remover()">Remover</button></p>
 
-
-    <p>Veja o console.log</p>
-
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/estudo_offline/removeElemento.js"></script>
 </body>
 </html>
