--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     </style>
 </head>
 <body id="corpo">
-    <h1 id="titulo">Remover Elemento</h1>
+    <h1 id="titulo">Ver gravidade da terra</h1>
 
-    <p id="texto">Texto que será removido...</p>
-    <p><button class="buttonGeral" onclick="remover()">Remover</button></p>
+    <p id="texto">Gravidade</p>
+    <p><button class="buttonGeral" onclick="gravidade()">Click</button></p>
 
-    <script src="assets/js/estudo_offline/ternario1.js"></script>
+    <script src="assets/js/estudo_offline/gravidade.js"></script>
 </body>
 </html>
